# pairs-trading-strategy

./: .gitignore  README.md  backtest.py  cointegration.py  main.py  optimize.py  pyproject.toml  strategy_utils.py  visualization.py
data/: ccxt_data.py  data.py
